WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136861
overflow:scroll should not leave space for a scroll corner with overlay scrollbars
https://bugs.webkit.org/show_bug.cgi?id=136861
Summary
overflow:scroll should not leave space for a scroll corner with overlay scrol...
Beth Dakin
Reported
2014-09-16 11:46:37 PDT
overflow:scroll should not leave space for a scroll corner on the Mac with overlay scrollbars because it looks wrong. Historically, overflow:scroll elements were meant to have scrollbar tracks and scroll corners whether or not there was content to scroll to. Since overlay scrollbars only appear when the user is scrolling, we don't do anything to differentiate overflow:scroll from overflow:auto if there is nothing to scroll too -- EXCEPT that we leave space for a scroll corner, which just looks wrong. We should stop doing that and embrace the fact that overflow:scroll just means something slightly different in the world of overlay scrollbars.
Attachments
Test case
(711 bytes, text/html)
2014-09-16 11:47 PDT
,
Beth Dakin
no flags
Details
Patch
(10.52 KB, patch)
2014-09-16 11:52 PDT
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-09-16 11:47:54 PDT
Created
attachment 238191
[details]
Test case Here's a test case that shows the problem. It's silly that we leave space for the scroll corner in the top two <div>s. It only makes sense in the bottom <div>.
Beth Dakin
Comment 2
2014-09-16 11:52:56 PDT
Created
attachment 238192
[details]
Patch
Beth Dakin
Comment 3
2014-09-16 13:32:52 PDT
Thanks Sam!
http://trac.webkit.org/changeset/173668
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug